fixed no-repeat background bug and video can fullscreen on mobile

--- a/src/Components/Footer/FooterComponent.scss
+++ b/src/Components/Footer/FooterComponent.scss
@@ -1,5 +1,5 @@
 .footer {
-    background: lightblue url("../../images/9.png") no-repeat fixed center center;
+    background: lightblue url("../../images/9.png") repeat fixed center center;
     height: 60px;
     width: 100%;
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1b147a', endColorstr='#0d1f4d',GradientType=1 );
