--- a/src/Components/Home/HomeComponent.scss
+++ b/src/Components/Home/HomeComponent.scss
@@ -32,7 +32,7 @@
 }
 
 .jumbotron {
-    background: lightblue url("../../images/9.png") no-repeat fixed center center; 
+    background: lightblue url("../../images/9.png") repeat fixed center center; 
     height: 100%;
 }
 
